--- a/ui/index.html
+++ b/ui/index.html
@@ -23,7 +23,8 @@
     <section id="panel" class="card hidden"></section>
   </div>
 
-  <script src="/ui/app.js"></script>
+  <script src="ui/app.js?v=7"></script>
+
 </body>
 </html>
 
